// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        class="ant-table-expand-icon-col"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell ant-table-row-expand-icon-cell"
                        />
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell ant-table-row-expand-icon-cell"
                        >
                          <button
                            aria-label="Expand row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="fish"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          123
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell ant-table-row-expand-icon-cell"
                        >
                          <button
                            aria-label="Expand row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="cat"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          456
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell ant-table-row-expand-icon-cell"
                        >
                          <button
                            aria-label="Expand row"
                            class="ant-table-row-expand-icon ant-table-row-expand-icon-collapsed"
                            type="button"
                          />
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div
                            class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                            data-span="1"
                          >
                            <div
                              class="ant-formily-item-control"
                            >
                              <div
                                class="ant-formily-item-control-content"
                              >
                                <div
                                  class="ant-formily-item-control-content-component"
                                >
                                  <span
                                    class="ant-input-affix-wrapper"
                                  >
                                    <input
                                      class="ant-input"
                                      type="text"
                                      value="dog"
                                    />
                                    <span
                                      class="ant-input-suffix"
                                    >
                                      <span />
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          789
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"name":"fish","age":123,"phone":"phone-1","_expanded":false},{"name":"cat","age":456,"phone":"phone-2","_expanded":false},{"name":"dog","age":789,"phone":"phone-3","_expanded":false}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Table 1`] = `
<DocumentFragment>
  <div
    class="ant-formily-layout"
  >
    <form>
      <div
        class="ant-table-wrapper antd_formily_table_boost undefined"
      >
        <div
          class="ant-spin-nested-loading"
        >
          <div
            class="ant-spin-container"
          >
            <div
              class="ant-table"
            >
              <div
                class="ant-table-container"
              >
                <div
                  class="ant-table-content"
                >
                  <table
                    style="table-layout: auto;"
                  >
                    <colgroup>
                      <col
                        class="ant-table-expand-icon-col"
                      />
                    </colgroup>
                    <thead
                      class="ant-table-thead"
                    >
                      <tr>
                        <th
                          class="ant-table-cell ant-table-row-expand-icon-cell"
                        />
                        <th
                          class="ant-table-cell"
                        >
                          名字
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          年龄
                        </th>
                        <th
                          class="ant-table-cell"
                        >
                          操作
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="ant-table-tbody"
                    >
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="0"
                      >
                        <td
                          class="ant-table-cell ant-table-row-expand-icon-cell"
                        >
                          <span>
                            <button
                              aria-label="Collapse row"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-expanded"
                              type="button"
                            />
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          fish
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          123
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-expanded-row ant-table-expanded-row-level-1"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="4"
                        >
                          <div
                            class="ant-table-wrapper antd_formily_table_boost undefined"
                          >
                            <div
                              class="ant-spin-nested-loading"
                            >
                              <div
                                class="ant-spin-container"
                              >
                                <div
                                  class="ant-table"
                                >
                                  <div
                                    class="ant-table-container"
                                  >
                                    <div
                                      class="ant-table-content"
                                    >
                                      <table
                                        style="table-layout: auto;"
                                      >
                                        <colgroup />
                                        <thead
                                          class="ant-table-thead"
                                        >
                                          <tr>
                                            <th
                                              class="ant-table-cell"
                                            >
                                              住址
                                            </th>
                                            <th
                                              class="ant-table-cell"
                                            >
                                              电话
                                            </th>
                                          </tr>
                                        </thead>
                                        <tbody
                                          class="ant-table-tbody"
                                        >
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="0"
                                          >
                                            <td
                                              class="ant-table-cell"
                                            >
                                              address-1
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              <div
                                                class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                                data-span="1"
                                              >
                                                <div
                                                  class="ant-formily-item-control"
                                                >
                                                  <div
                                                    class="ant-formily-item-control-content"
                                                  >
                                                    <div
                                                      class="ant-formily-item-control-content-component"
                                                    >
                                                      <span
                                                        class="ant-input-affix-wrapper"
                                                      >
                                                        <input
                                                          class="ant-input"
                                                          type="text"
                                                          value="phone-1"
                                                        />
                                                        <span
                                                          class="ant-input-suffix"
                                                        >
                                                          <span />
                                                        </span>
                                                      </span>
                                                    </div>
                                                  </div>
                                                </div>
                                              </div>
                                            </td>
                                          </tr>
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="1"
                                          >
                                            <td
                                              class="ant-table-cell"
                                            >
                                              address-2
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              <div
                                                class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                                data-span="1"
                                              >
                                                <div
                                                  class="ant-formily-item-control"
                                                >
                                                  <div
                                                    class="ant-formily-item-control-content"
                                                  >
                                                    <div
                                                      class="ant-formily-item-control-content-component"
                                                    >
                                                      <span
                                                        class="ant-input-affix-wrapper"
                                                      >
                                                        <input
                                                          class="ant-input"
                                                          type="text"
                                                          value="phone-2"
                                                        />
                                                        <span
                                                          class="ant-input-suffix"
                                                        >
                                                          <span />
                                                        </span>
                                                      </span>
                                                    </div>
                                                  </div>
                                                </div>
                                              </div>
                                            </td>
                                          </tr>
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="2"
                                          >
                                            <td
                                              class="ant-table-cell"
                                            >
                                              address-3
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              <div
                                                class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                                data-span="1"
                                              >
                                                <div
                                                  class="ant-formily-item-control"
                                                >
                                                  <div
                                                    class="ant-formily-item-control-content"
                                                  >
                                                    <div
                                                      class="ant-formily-item-control-content-component"
                                                    >
                                                      <span
                                                        class="ant-input-affix-wrapper"
                                                      >
                                                        <input
                                                          class="ant-input"
                                                          type="text"
                                                          value="phone-3"
                                                        />
                                                        <span
                                                          class="ant-input-suffix"
                                                        >
                                                          <span />
                                                        </span>
                                                      </span>
                                                    </div>
                                                  </div>
                                                </div>
                                              </div>
                                            </td>
                                          </tr>
                                        </tbody>
                                      </table>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="1"
                      >
                        <td
                          class="ant-table-cell ant-table-row-expand-icon-cell"
                        >
                          <span>
                            <button
                              aria-label="Collapse row"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-expanded"
                              type="button"
                            />
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          cat
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          456
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-expanded-row ant-table-expanded-row-level-1"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="4"
                        >
                          <div
                            class="ant-table-wrapper antd_formily_table_boost undefined"
                          >
                            <div
                              class="ant-spin-nested-loading"
                            >
                              <div
                                class="ant-spin-container"
                              >
                                <div
                                  class="ant-table"
                                >
                                  <div
                                    class="ant-table-container"
                                  >
                                    <div
                                      class="ant-table-content"
                                    >
                                      <table
                                        style="table-layout: auto;"
                                      >
                                        <colgroup />
                                        <thead
                                          class="ant-table-thead"
                                        >
                                          <tr>
                                            <th
                                              class="ant-table-cell"
                                            >
                                              住址
                                            </th>
                                            <th
                                              class="ant-table-cell"
                                            >
                                              电话
                                            </th>
                                          </tr>
                                        </thead>
                                        <tbody
                                          class="ant-table-tbody"
                                        >
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="0"
                                          >
                                            <td
                                              class="ant-table-cell"
                                            >
                                              address-4
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              <div
                                                class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                                data-span="1"
                                              >
                                                <div
                                                  class="ant-formily-item-control"
                                                >
                                                  <div
                                                    class="ant-formily-item-control-content"
                                                  >
                                                    <div
                                                      class="ant-formily-item-control-content-component"
                                                    >
                                                      <span
                                                        class="ant-input-affix-wrapper"
                                                      >
                                                        <input
                                                          class="ant-input"
                                                          type="text"
                                                          value="phone-4"
                                                        />
                                                        <span
                                                          class="ant-input-suffix"
                                                        >
                                                          <span />
                                                        </span>
                                                      </span>
                                                    </div>
                                                  </div>
                                                </div>
                                              </div>
                                            </td>
                                          </tr>
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="1"
                                          >
                                            <td
                                              class="ant-table-cell"
                                            >
                                              address-5
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              <div
                                                class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                                data-span="1"
                                              >
                                                <div
                                                  class="ant-formily-item-control"
                                                >
                                                  <div
                                                    class="ant-formily-item-control-content"
                                                  >
                                                    <div
                                                      class="ant-formily-item-control-content-component"
                                                    >
                                                      <span
                                                        class="ant-input-affix-wrapper"
                                                      >
                                                        <input
                                                          class="ant-input"
                                                          type="text"
                                                          value="phone-5"
                                                        />
                                                        <span
                                                          class="ant-input-suffix"
                                                        >
                                                          <span />
                                                        </span>
                                                      </span>
                                                    </div>
                                                  </div>
                                                </div>
                                              </div>
                                            </td>
                                          </tr>
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="2"
                                          >
                                            <td
                                              class="ant-table-cell"
                                            >
                                              address-6
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              <div
                                                class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                                data-span="1"
                                              >
                                                <div
                                                  class="ant-formily-item-control"
                                                >
                                                  <div
                                                    class="ant-formily-item-control-content"
                                                  >
                                                    <div
                                                      class="ant-formily-item-control-content-component"
                                                    >
                                                      <span
                                                        class="ant-input-affix-wrapper"
                                                      >
                                                        <input
                                                          class="ant-input"
                                                          type="text"
                                                          value="phone-6"
                                                        />
                                                        <span
                                                          class="ant-input-suffix"
                                                        >
                                                          <span />
                                                        </span>
                                                      </span>
                                                    </div>
                                                  </div>
                                                </div>
                                              </div>
                                            </td>
                                          </tr>
                                        </tbody>
                                      </table>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-row ant-table-row-level-0"
                        data-row-key="2"
                      >
                        <td
                          class="ant-table-cell ant-table-row-expand-icon-cell"
                        >
                          <span>
                            <button
                              aria-label="Collapse row"
                              class="ant-table-row-expand-icon ant-table-row-expand-icon-expanded"
                              type="button"
                            />
                          </span>
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          dog
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          789
                        </td>
                        <td
                          class="ant-table-cell"
                        >
                          <div>
                            <a>
                              编辑
                            </a>
                            <div
                              class="ant-divider ant-divider-vertical"
                              role="separator"
                            />
                            <a>
                              删除
                            </a>
                          </div>
                        </td>
                      </tr>
                      <tr
                        class="ant-table-expanded-row ant-table-expanded-row-level-1"
                      >
                        <td
                          class="ant-table-cell"
                          colspan="4"
                        >
                          <div
                            class="ant-table-wrapper antd_formily_table_boost undefined"
                          >
                            <div
                              class="ant-spin-nested-loading"
                            >
                              <div
                                class="ant-spin-container"
                              >
                                <div
                                  class="ant-table"
                                >
                                  <div
                                    class="ant-table-container"
                                  >
                                    <div
                                      class="ant-table-content"
                                    >
                                      <table
                                        style="table-layout: auto;"
                                      >
                                        <colgroup />
                                        <thead
                                          class="ant-table-thead"
                                        >
                                          <tr>
                                            <th
                                              class="ant-table-cell"
                                            >
                                              住址
                                            </th>
                                            <th
                                              class="ant-table-cell"
                                            >
                                              电话
                                            </th>
                                          </tr>
                                        </thead>
                                        <tbody
                                          class="ant-table-tbody"
                                        >
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="0"
                                          >
                                            <td
                                              class="ant-table-cell"
                                            >
                                              address-7
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              <div
                                                class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                                data-span="1"
                                              >
                                                <div
                                                  class="ant-formily-item-control"
                                                >
                                                  <div
                                                    class="ant-formily-item-control-content"
                                                  >
                                                    <div
                                                      class="ant-formily-item-control-content-component"
                                                    >
                                                      <span
                                                        class="ant-input-affix-wrapper"
                                                      >
                                                        <input
                                                          class="ant-input"
                                                          type="text"
                                                          value="phone-7"
                                                        />
                                                        <span
                                                          class="ant-input-suffix"
                                                        >
                                                          <span />
                                                        </span>
                                                      </span>
                                                    </div>
                                                  </div>
                                                </div>
                                              </div>
                                            </td>
                                          </tr>
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="1"
                                          >
                                            <td
                                              class="ant-table-cell"
                                            >
                                              address-8
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              <div
                                                class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                                data-span="1"
                                              >
                                                <div
                                                  class="ant-formily-item-control"
                                                >
                                                  <div
                                                    class="ant-formily-item-control-content"
                                                  >
                                                    <div
                                                      class="ant-formily-item-control-content-component"
                                                    >
                                                      <span
                                                        class="ant-input-affix-wrapper"
                                                      >
                                                        <input
                                                          class="ant-input"
                                                          type="text"
                                                          value="phone-8"
                                                        />
                                                        <span
                                                          class="ant-input-suffix"
                                                        >
                                                          <span />
                                                        </span>
                                                      </span>
                                                    </div>
                                                  </div>
                                                </div>
                                              </div>
                                            </td>
                                          </tr>
                                          <tr
                                            class="ant-table-row ant-table-row-level-0"
                                            data-row-key="2"
                                          >
                                            <td
                                              class="ant-table-cell"
                                            >
                                              address-9
                                            </td>
                                            <td
                                              class="ant-table-cell"
                                            >
                                              <div
                                                class="ant-formily-item ant-formily-item-layout-horizontal ant-formily-item-feedback-layout-terse ant-formily-item-label-align-right ant-formily-item-control-align-left"
                                                data-span="1"
                                              >
                                                <div
                                                  class="ant-formily-item-control"
                                                >
                                                  <div
                                                    class="ant-formily-item-control-content"
                                                  >
                                                    <div
                                                      class="ant-formily-item-control-content-component"
                                                    >
                                                      <span
                                                        class="ant-input-affix-wrapper"
                                                      >
                                                        <input
                                                          class="ant-input"
                                                          type="text"
                                                          value="phone-9"
                                                        />
                                                        <span
                                                          class="ant-input-suffix"
                                                        >
                                                          <span />
                                                        </span>
                                                      </span>
                                                    </div>
                                                  </div>
                                                </div>
                                              </div>
                                            </td>
                                          </tr>
                                        </tbody>
                                      </table>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </td>
                      </tr>
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        {"data":[{"name":"fish","age":123,"contacts":[{"phone":"phone-1","address":"address-1"},{"phone":"phone-2","address":"address-2"},{"phone":"phone-3","address":"address-3"}],"_expanded":true},{"name":"cat","age":456,"contacts":[{"phone":"phone-4","address":"address-4"},{"phone":"phone-5","address":"address-5"},{"phone":"phone-6","address":"address-6"}],"_expanded":true},{"name":"dog","age":789,"contacts":[{"phone":"phone-7","address":"address-7"},{"phone":"phone-8","address":"address-8"},{"phone":"phone-9","address":"address-9"}],"_expanded":true}]}
      </div>
    </form>
  </div>
</DocumentFragment>
`;
